--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Hotel XY</h1>
     <nav>
         <ul>
-            <li><a href="#">Welness</a></li>
+            <li><a href="#">Wellness</a></li>
             <li><a href="#">Preise</a></li>
             <li><a href="#">Zimmer</a></li>
         </ul>
